# prompt-guard

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: results.md
examples/: benchmark.py  full_pipeline.py  quickstart.py
src/prompt_guard/: __init__.py  benchmark.py  pipeline.py  result.py
src/prompt_guard/data/: eval_samples.py  training_samples.py
src/prompt_guard/layers/: __init__.py  base.py  context.py  heuristic.py  output.py  sanitizer.py
src/prompt_guard/patterns/: attacks.yaml
tests/: test_heuristic.py  test_layers_3_4.py
